<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.simonegazza</groupId>
	<artifactId>mzn-parser</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Parameter lifting parser</name>
	<description>MiniZinc to MiniZinc parser for parameter lifting</description>
	<properties>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>
	<dependencies>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.13.1</version>
		</dependency>
		<dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter</artifactId>
	        <version>5.10.0</version>
	        <scope>test</scope>
    	</dependency>
    	<!-- Command line options -->
    	<dependency>
		    <groupId>info.picocli</groupId>
		    <artifactId>picocli</artifactId>
		    <version>4.7.7</version>
		</dependency> 
	</dependencies>
	<build>
		<plugins>
			<!-- Tests -->
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-surefire-plugin</artifactId>
	            <version>3.1.2</version>
	        </plugin>
			<!-- Spotless - automatic with compile -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.43.0</version>
				<configuration>
					<java>
						<eclipse>
							<version>4.26</version>
							<file>${project.basedir}/code-formatting.xml</file>
						</eclipse>
						<removeUnusedImports />
						<trimTrailingWhitespace />
						<endWithNewline />
						<importOrder />
						<formatAnnotations />
					</java>
				</configuration>
				<executions>
					<execution>
						<id>format-on-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>apply</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- exec:java -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<mainClass>me.simonegazza.lifting.Main</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<!-- ANTLR4 - automatic with compile -->
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.13.2</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
						<configuration>
							<sourceDirectory>${project.basedir}/grammars</sourceDirectory>
							<outputDirectory>
								${project.basedir}/src/main/java/me/simonegazza/antlr/minizinc</outputDirectory>
							<visitor>true</visitor>
							<arguments>
								<argument>-package</argument>
								<argument>me.simonegazza.antlr.minizinc</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>